<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="description_post_attachment">Post attachment</string>
    <string name="description_unread_posts">New posts</string>
    <string name="description_pick_photo">Open Gallery</string>
    <string name="description_take_photo">Open Camera</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="new_posts">New posts (%1$d)</string>
    <string name="retry_acting">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="error_response">Server replied with %1$s (%2$d)</string>
    <string name="save">Save</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="remove_photo">Remove</string>
    <string name="hint_new_post">Type here!</string>
    <string name="signout">Sign out</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="auth_login">Login</string>
    <string name="auth_password">Password</string>
    <string name="auth_empty_credentials">Login and password cannot be empty</string>
    <string name="auth_signout_confirm">Are you sure you want to sign out?</string>
    <string name="auth_signout_yes">Yes</string>
    <string name="auth_signout_no">No, of course no!</string>
    <string name="auth_name">Name</string>
    <string name="auth_passwords_mismatch">Passwords mismatch</string>
    <string name="auth_hint_name">Your name</string>
    <string name="auth_hint_login">nickname</string>
    <string name="auth_hint_password">Enter password</string>
    <string name="auth_hint_password_repeat">Repeat password</string>
</resources>
