<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/nameTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/name"
            android:text="@string/auth_name" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auth_hint_name"
            android:inputType="text" />

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/login"
            android:text="@string/auth_login" />

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auth_hint_login"
            android:inputType="text" />

        <TextView
            android:id="@+id/passwordTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/password"
            android:text="@string/auth_password" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="16"
            android:hint="@string/auth_hint_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/passwordRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="16"
            android:hint="@string/auth_hint_password_repeat"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/singUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/signup" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
