<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NewPostFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing"
            android:orientation="vertical"
            android:padding="@dimen/common_spacing"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_spacing_double"
                android:autofillHints=""
                android:background="@android:color/transparent"
                android:gravity="start|top"
                android:hint="@string/hint_new_post"
                android:inputType="textMultiLine"
                android:paddingVertical="@dimen/text_padding_vertical" />

            <FrameLayout
                android:id="@+id/photoPreviewContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible">

                <ImageView
                    android:id="@+id/photoPreview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/description_post_attachment"
                    tools:src="@drawable/attachment_placeholder" />

                <Button
                    android:id="@+id/removePhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:text="@string/remove_photo" />
            </FrameLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottomAppBar"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/pickPhoto"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/description_pick_photo"
            android:padding="@dimen/icon_button_padding"
            android:src="@drawable/ic_photo_24" />

        <ImageView
            android:id="@+id/takePhoto"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/description_take_photo"
            android:padding="@dimen/icon_button_padding"
            android:src="@drawable/ic_camera_24" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
